--- a/barra.css
+++ b/barra.css
@@ -18,6 +18,7 @@
       right: 4vw;
     }
 
+    /* Add a black background color to the top navigation */
     .topnav {
       background-color: #ff6961;
       overflow: hidden;
@@ -30,7 +31,7 @@
       float: left;
       color: black;
       text-align: center;
-      padding: 1.3vh 5.3vw;
+      padding: 1.3vh 5.25vw;
       text-decoration: none;
       font-size: 1.23vw;
     }
@@ -39,6 +40,16 @@
       width: 350%;
       height: 4vh;
 
+    }
+
+    h1 {
+      position: absolute;
+      width: 100px;
+      margin-left: -50px;
+      left: 48%;
+      top: 17vh;
+      font-size: 3em;
+      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     }
 
 
@@ -69,12 +80,14 @@
     }
 
     #logo {
-      width: 14.7vw;
+      width: 13.3vw;
     }
 
     body {
       background: rgb(255, 205, 155);
     }
+
+
     #fcont{
       position: absolute;
       top: 17vh;
