--- a/barra.css
+++ b/barra.css
@@ -85,24 +85,31 @@
       width:100%;
     }
 
-
+    
     .menu {
       height: 70px;
       width: 70px;
       right: 70px;
-      top: 20px;
+      top: 13.5vh;
       text-align: center;
-      position: absolute;
-      background: #fff;
-      overflow: hidden;
+      position: fixed;
+      background-color: #ff6961;     
+       overflow: hidden;
       transition: all 0.2s ease;
       z-index: 999;
+    }
+    .menu a{
+      text-decoration: none;
+      color: black;
+      padding: 1.3vh 5.25vw;
+
     }
     .menu.active {
       width: calc(100% - 140px);
     }
     .menu.active .menuContent * {
       opacity: 1;
+  
     }
     .menu.active span i:nth-child(1) {
       transform: rotate(-45deg) translate(-50%, -50%);
@@ -122,7 +129,7 @@
       position: absolute;
       right: 0;
       cursor: pointer;
-      background: #fff;
+      background: #ff6961;
       z-index: 1;
     }
     .menu span i {
@@ -133,7 +140,7 @@
       left: 0;
       right: 0;
       margin: auto;
-      background-color: #ccc;
+      background-color: black;
       transition: transform 0.3s ease, opacity 0.1s ease 0.1s;
     }
     .menu span i:nth-child(1) {
@@ -158,8 +165,6 @@
     }
     .menu .menuContent ul li {
       display: inline-block;
-      margin-left: 50px;
-      margin-right: 50px;
       color: #2d3235;
       transition: opacity 0.3s ease 0.3s;
       cursor: pointer;
@@ -169,18 +174,22 @@
       opacity: 0.8;
       top: 13px;
       left: 20px;
+      background-color: #ddd;
+
     }
     .menu .menuContent ul li:hover:after {
       opacity: 0.8;
       bottom: 13px;
       left: -20px;
+      background-color: #ddd;
+
     }
     .menu .menuContent ul li:before, .menu .menuContent ul li:after {
       content: "";
       position: absolute;
       width: 20px;
       height: 2px;
-      background: #ccc;
+      background: #ff6961;
       transition: all 0.3s ease;
     }
     .menu .menuContent ul li:before {
